# TeBATDrift

./: .gitignore  README.md
TeBATDrift_v1.0.0/: CMakeLists.txt  README  drift-setup  test_garfield.cc
TeBATDrift_v1.0.0/condor/: drift_scan.job  run_drift_job.csh
TeBATDrift_v1.0.0/config/: Ar-CO2_70_30_config.json  Ar-CO2_90_10_config.json  Ne-CO2_90_10_config.json  drift_config.json
TeBATDrift_v1.0.0/gas/: ar70_co230_293K_760Torr_400Vcm.gas  ar90_co210_293K_760Torr_400Vcm.gas  ne90_co210_293K_760Torr_400Vcm.gas
TeBATDrift_v1.0.0/scripts/: merge_drift_outputs.py  plot_drift_summary.py
TeBATDrift_v1.0.0/src/: main.cpp
